--- a/Aplicacion/src/app/Persona/editar/editar.component.html
+++ b/Aplicacion/src/app/Persona/editar/editar.component.html
@@ -1,1 +1,63 @@
-<p>editar works!</p>
+<div class="container col-md-6">
+        <div class="card">
+            <div class="card-header">
+                <h3>Editar Persona</h3>
+            </div>
+            <div class="card-body">
+    
+                    <div class="form-group">
+                        <label for="">Cedula</label>
+                        <input type="text" class="form-control">
+                        </div>
+    
+                   <div class="form-group">
+                       <label for="">Nombre</label>
+                       <input type="text" class="form-control">
+                   </div>
+    
+                   <div class="form-group">
+                        <label for="">Apellido</label>
+                        <input type="text" class="form-control">
+                    </div>
+    
+                    <div class="form-group">
+                        <label for="">Telefono</label>
+                        <input type="text" class="form-control">
+                     </div>
+    
+                    <div class="form-group">
+                        <label for="">Celular</label>
+                        <input type="text" class="form-control">
+                    </div>
+    
+                    <div class="form-group">
+                        <label for="">Correo</label>
+                        <input type="text" class="form-control">
+                    </div>
+                    
+                    <div class="form-group">
+                        <label for="">Direccion</label>
+                        <input type="text" class="form-control">
+                    </div>
+    
+                    <div class="form-group">
+                        <label for="">Salario</label>
+                        <input type="text" class="form-control">
+                    </div>
+                    
+                    <div class="form-group">
+                        <label for="">Etnia</label>
+                        <input type="text" class="form-control">
+                    </div>
+    
+                    <div class="form-group">
+                        <label for="">Nacionalidad</label>
+                        <input type="text" class="form-control">
+                    </div>
+    
+                    <button (click)="Actualizar()" class="btn btn-danger"></button>
+               </form>
+            </div>
+        </div>
+    </div>
+    
